--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <p id="display">0</p>
     </div>
        <div class="numpad">
-         <button class="botones" onclick="digitAdder(7)">7</button>
-         <button class="botones" onclick="digitAdder(8)">8</button>
-         <button class="botones" onclick="digitAdder(9)">9</button>
+         <button class="botones numeros" onclick="digitAdder(7)">7</button>
+         <button class="botones numeros" onclick="digitAdder(8)">8</button>
+         <button class="botones numeros" onclick="digitAdder(9)">9</button>
          <button class="botones operadores" onclick="operatorAdder('+')">+</button>
-         <button class="botones" onclick="digitAdder(4)">4</button>
-         <button class="botones" onclick="digitAdder(5)">5</button>
-         <button class="botones" onclick="digitAdder(6)">6</button>
+         <button class="botones numeros" onclick="digitAdder(4)">4</button>
+         <button class="botones numeros" onclick="digitAdder(5)">5</button>
+         <button class="botones numeros" onclick="digitAdder(6)">6</button>
          <button class="botones operadores" onclick="operatorAdder('*')">*</button>
-         <button class="botones" onclick="digitAdder(1)">1</button>
-         <button class="botones" onclick="digitAdder(2)">2</button>
-         <button class="botones" onclick="digitAdder(3)">3</button>
+         <button class="botones numeros" onclick="digitAdder(1)">1</button>
+         <button class="botones numeros" onclick="digitAdder(2)">2</button>
+         <button class="botones numeros" onclick="digitAdder(3)">3</button>
          <button class="botones operadores" onclick="operatorAdder('/')">/</button>
-         <button class="botones" onclick="digitAdder(0)">0</button>
+         <button class="botones numeros" onclick="digitAdder(0)">0</button>
          <button class="botones" onclick="digitAdder(0o0)">c</button>
          <button class="botones" id="equal">=</button>
          <button class="botones operadores" onclick="operatorAdder('-')">-</button>
