--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
          <button class="botones numeros" onclick="digitAdder(7)">7</button>
          <button class="botones numeros" onclick="digitAdder(8)">8</button>
          <button class="botones numeros" onclick="digitAdder(9)">9</button>
-         <button class="botones operadores" onclick="operator('+')">+</button>
+         <button class="botones operadores" id="mas" onclick="operator('+')">+</button>
          <button class="botones numeros" onclick="digitAdder(4)">4</button>
          <button class="botones numeros" onclick="digitAdder(5)">5</button>
          <button class="botones numeros" onclick="digitAdder(6)">6</button>
-         <button class="botones operadores" onclick="operator('*')">*</button>
+         <button class="botones operadores" id="por" onclick="operator('*')">*</button>
          <button class="botones numeros" onclick="digitAdder(1)">1</button>
          <button class="botones numeros" onclick="digitAdder(2)">2</button>
          <button class="botones numeros" onclick="digitAdder(3)">3</button>
-         <button class="botones operadores" onclick="operator('/')">/</button>
+         <button class="botones operadores" id="dividir" onclick="operator('/')">/</button>
          <button class="botones numeros" onclick="digitAdder(0)">0</button>
          <button class="botones" onclick="ce()">c</button>
          <button class="botones" id="equal" onclick=" equal(number1, number2, operando)">=</button>
-         <button class="botones operadores" onclick="operator('-')">-</button>
+         <button class="botones operadores" id="menos" onclick="operator('-')">-</button>
         
         </div>
     </div>
